# ros2_canopen_motor_poweroff_solution

./: README.md
ros2_canopen_motor_poweroff_solution/: PROJECT_STRUCTURE.md  README.md
ros2_canopen_motor_poweroff_solution/docs/: CIA402_POWEROFF_TECHNICAL.md  TROUBLESHOOTING.md
ros2_canopen_motor_poweroff_solution/examples/: emergency_poweroff.sh  example.urdf.xacro  ros2_controllers.yaml.example
ros2_canopen_motor_poweroff_solution/src/motor_poweroff_controller/: CMakeLists.txt  package.xml  poweroff_plugin.xml
ros2_canopen_motor_poweroff_solution/src/motor_poweroff_controller/config/: poweroff_config.yaml
ros2_canopen_motor_poweroff_solution/src/motor_poweroff_controller/include/motor_poweroff_controller/: motor_poweroff_controller.hpp
ros2_canopen_motor_poweroff_solution/src/motor_poweroff_controller/launch/: poweroff.launch.py
ros2_canopen_motor_poweroff_solution/src/motor_poweroff_controller/src/: motor_poweroff_controller.cpp  poweroff_node.cpp
